// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly ExpensesSummery with 1 expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $1.23
  </h2>
</div>
`;

exports[`should render correctly ExpensesSummery with multipale expenses 1`] = `
<div>
  <h2>
    Viewing 
    26
     
    expenses
     totalling 
    $199,132,331.23
  </h2>
</div>
`;
